chore(root): update hex value colors to css variables

--- a/root.css
+++ b/root.css
@@ -61,14 +61,6 @@
   --sgds-danger-700: #950000;
   --sgds-danger-800: #720000;
   --sgds-danger-900: #4f0000;
-  --sgds-primary-filled: #5a42c0;
-  --sgds-secondary-filled: #006472;
-  --sgds-success-filled: #006b00;
-  --sgds-info-filled: #0049dc;
-  --sgds-warning-filled: #864b00;
-  --sgds-danger-filled: #b90000;
-  --sgds-light-filled: #eaeaea;
-  --sgds-dark-filled: #252525;
 
   --sgds-black: #000;
   --sgds-white: #fff;
@@ -83,32 +75,39 @@
   --sgds-gray-700: #3e3e3e;
   --sgds-gray-800: #252525;
   --sgds-gray-900: #0e0e0e;
-  --sgds-primary-text-emphasis: #5a42c0;
-  --sgds-secondary-text-emphasis: #006472;
-  --sgds-success-text-emphasis: #006b00;
-  --sgds-info-text-emphasis: #0049dc;
-  --sgds-warning-text-emphasis: #864b00;
-  --sgds-danger-text-emphasis: #b90000;
-  --sgds-light-text-emphasis: #252525;
-  --sgds-dark-text-emphasis: #fff;
-  --sgds-primary-bg-subtle: #eae8ff;
-  --sgds-secondary-bg-subtle: #c8f1f9;
-  --sgds-success-bg-subtle: #c2f5bf;
-  --sgds-info-bg-subtle: #c5f0ff;
-  --sgds-warning-bg-subtle: #ffe6c6;
-  --sgds-danger-bg-subtle: #ffdac8;
-  --sgds-light-bg-subtle: #eaeaea;
-  --sgds-dark-bg-subtle: #252525;
-  --sgds-primary-border-subtle: #9288f0;
-  --sgds-secondary-border-subtle: #5b9da9;
-  --sgds-success-border-subtle: #53a450;
-  --sgds-info-border-subtle: #5592ff;
-  --sgds-warning-border-subtle: #bc8a57;
-  --sgds-danger-border-subtle: #f06e57;
-  --sgds-light-border-subtle: #939393;
-  --sgds-dark-border-subtle: #939393;
-  --sgds-white-rgb: 255, 255, 255;
-  --sgds-black-rgb: 0, 0, 0;
+
+  --sgds-primary-filled: var(--sgds-primary);
+  --sgds-secondary-filled: var(--sgds-secondary);
+  --sgds-success-filled: var(---sgds-success);
+  --sgds-info-filled: var(--sgds-info);
+  --sgds-warning-filled: var(--sgds-warning);
+  --sgds-danger-filled: var(--sgds-danger);
+  --sgds-light-filled: var(--sgds-light);
+  --sgds-dark-filled: var(--sgds-dark);
+  --sgds-primary-text-emphasis: var(--sgds-primary);
+  --sgds-secondary-text-emphasis: var(--sgds-secondary);
+  --sgds-success-text-emphasis: var(---sgds-success);
+  --sgds-info-text-emphasis: var(--sgds-info);
+  --sgds-warning-text-emphasis: var(--sgds-warning);
+  --sgds-danger-text-emphasis: var(--sgds-danger);
+  --sgds-light-text-emphasis: var(--sgds-dark);
+  --sgds-dark-text-emphasis: var(--sgds-white);
+  --sgds-primary-bg-subtle: var(--sgds-primary-100);
+  --sgds-secondary-bg-subtle: var(--sgds-secondary-100);
+  --sgds-success-bg-subtle: var(--sgds-success-100);
+  --sgds-info-bg-subtle: var(--sgds-info-100);
+  --sgds-warning-bg-subtle: var(--sgds-warning-100);
+  --sgds-danger-bg-subtle: var(--sgds-danger-100);
+  --sgds-light-bg-subtle: var(--sgds-gray-100);
+  --sgds-dark-bg-subtle: var(--sgds-gray-800);
+  --sgds-primary-border-subtle: var(--sgds-primary-400);
+  --sgds-secondary-border-subtle: var(--sgds-secondary-400);
+  --sgds-success-border-subtle: var(--sgds-success-400);
+  --sgds-info-border-subtle: var(--sgds-info-400);
+  --sgds-warning-border-subtle: var(--sgds-warning-400);
+  --sgds-danger-border-subtle: var(--sgds-danger-400);
+  --sgds-light-border-subtle: var(--sgds-gray-400);
+  --sgds-dark-border-subtle: var(--sgds-gray-400);
   --sgds-font-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans",
     "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -117,26 +116,17 @@
   --sgds-body-font-size: 1rem;
   --sgds-body-font-weight: 400;
   --sgds-body-line-height: 2;
-  --sgds-body-color: #252525;
-  --sgds-body-color-rgb: 37, 37, 37;
-  --sgds-body-bg: #fff;
-  --sgds-body-bg-rgb: 255, 255, 255;
-  --sgds-emphasis-color: #000;
-  --sgds-emphasis-color-rgb: 0, 0, 0;
+  --sgds-body-color: var(--sgds-dark);
+  --sgds-body-bg: var(--sgds-white);
+  /* --sgds-emphasis-color: #000;
   --sgds-secondary-color: rgba(37, 37, 37, 0.75);
-  --sgds-secondary-color-rgb: 37, 37, 37;
   --sgds-secondary-bg: #d2d2d2;
-  --sgds-secondary-bg-rgb: 210, 210, 210;
   --sgds-tertiary-color: rgba(37, 37, 37, 0.5);
-  --sgds-tertiary-color-rgb: 37, 37, 37;
-  --sgds-tertiary-bg: #eaeaea;
-  --sgds-tertiary-bg-rgb: 234, 234, 234;
+  --sgds-tertiary-bg: #eaeaea; */
   --sgds-heading-color: ;
-  --sgds-link: #0049dc;
-  --sgds-link-rgb: 0, 73, 220;
+  --sgds-link: var(--sgds-info);
   --sgds-link-decoration: underline;
-  --sgds-link-hover-color: #003ab0;
-  --sgds-link-hover-color-rgb: 0, 58, 176;
+  --sgds-link-hover-color: var(--sgds-info-700);
   --sgds-code-color: #d63384;
   --sgds-highlight-color: #252525;
   --sgds-highlight-bg: #ffe6c6;
@@ -164,7 +154,7 @@
   --sgds-form-invalid-border-color: #b90000;
 
   --sgds-focus-width: 0.13rem;
-  --sgds-color-disabled: #939393;
+  --sgds-color-disabled: var(--sgds-gray-400);
   --sgds-disabled-opacity: 0.5;
   --sgds-input-btn-padding-x: 1rem;
   --sgds-input-btn-padding-y: 0.4375rem;
