--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -5,10 +5,10 @@
   --sgds-btn-font-family: var(--sgds-font-sans-serif);
   --sgds-btn-font-size: 1rem;
   --sgds-btn-font-weight: 400;
-  --sgds-btn-line-height: 2;
+  --sgds-btn-line-height: var(--sgds-body-line-height);
   --sgds-btn-color: var(--sgds-body-color);
   --sgds-btn-bg: transparent;
-  --sgds-btn-border-width: 1px;
+  --sgds-btn-border-width: var(--sgds-border-width);
   --sgds-btn-border-color: transparent;
   --sgds-btn-border-radius: var(--sgds-border-radius);
   --sgds-btn-disabled-color: var(--sgds-white);
@@ -35,7 +35,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-primary-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-primary-700);
-  /* --sgds-btn-hover-border-color: var(--sgds-primary-filled); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-primary-700);
   --sgds-btn-active-border-color: var(--sgds-primary-filled);
@@ -48,7 +47,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-secondary-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-secondary-700);
-  /* --sgds-btn-hover-border-color: var(--sgds-secondary-filled); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-secondary-700);
   --sgds-btn-active-border-color: var(--sgds-secondary-filled);
@@ -61,7 +59,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-warning-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-warning-700);
-  /* --sgds-btn-hover-border-color: var(--sgds-warning-filled); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-warning-700);
   --sgds-btn-active-border-color: var(--sgds-warning-filled);
@@ -74,7 +71,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-danger-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-danger-700);
-  /* --sgds-btn-hover-border-color: var(--sgds-danger-filled); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-danger-700);
   --sgds-btn-active-border-color: var(--sgds-danger-filled);
@@ -87,7 +83,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-success-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-success-700);
-  /* --sgds-btn-hover-border-color: var(--sgds-success-filled); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-success-700);
   --sgds-btn-active-border-color: var(--sgds-success-filled);
@@ -100,7 +95,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-info-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-info-700);
-  /* --sgds-btn-hover-border-color: var(--sgds-info-filled); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-info-700);
   --sgds-btn-active-border-color: var(--sgds-info-filled);
@@ -113,7 +107,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-light-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-gray-200);
-  /* --sgds-btn-hover-border-color: var(--sgds-gray-200); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-gray-200);
   --sgds-btn-active-border-color: var(--sgds-gray-200);
@@ -126,7 +119,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: var(--sgds-dark-filled);
   --sgds-btn-hover-color: #fff;
   --sgds-btn-hover-bg: var(--sgds-gray-700);
-  /* --sgds-btn-hover-border-color: var(--sgds-gray-700); */
   --sgds-btn-active-color: #fff;
   --sgds-btn-active-bg: var(--sgds-gray-700);
   --sgds-btn-active-border-color: var(--sgds-gray-700);
@@ -139,7 +131,6 @@ button:focus:not(:focus-visible) {
   --sgds-btn-border-color: transparent;
   --sgds-btn-hover-color: var(--sgds-info-700);
   --sgds-btn-hover-bg: transparent;
-  /* --sgds-btn-hover-border-color: transparent; */
   --sgds-btn-active-color: var(--sgds-info-700);
   --sgds-btn-active-bg: transparent;
   --sgds-btn-active-border-color: transparent;
