--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -91,24 +91,24 @@
   /**scss */
 
   :host {
-    --masthead-font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans",
+    --sgds-masthead-font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans",
       sans-serif;
-    --masthead-text-color: hsl(0, 0%, 28%);
-    --masthead-link-color: hsl(222, 63%, 50%);
-    --masthead-link-color-hover: hsl(221, 64%, 55%);
-    --masthead-mobile-font-size: 0.6875rem;
-    --masthead-mobile-padding-x: 0.75rem;
-    --masthead-fluid-padding-x: 0.75rem;
-    --masthead-crest-color: rgb(239, 51, 32);
+    --sgds-masthead-text-color: hsl(0, 0%, 28%);
+    --sgds-masthead-link-color: hsl(222, 63%, 50%);
+    --sgds-masthead-link-color-hover: hsl(221, 64%, 55%);
+    --sgds-masthead-mobile-font-size: 0.6875rem;
+    --sgds-masthead-mobile-padding-x: 0.75rem;
+    --sgds-masthead-fluid-padding-x: 0.75rem;
+    --sgds-masthead-crest-color: rgb(239, 51, 32);
   }
 
   .sgds-masthead {
     font-size: 0.875rem;
     background-color: hsl(0, 0%, 94%);
-    font-family: var(--masthead-font-family);
-    color: var(--masthead-text-color);
+    font-family: var(--sgds-masthead-font-family);
+    color: var(--sgds-masthead-text-color);
     @media screen and (max-width: 1023px) {
-      font-size: var(--masthead-mobile-font-size);
+      font-size: var(--sgds-masthead-mobile-font-size);
       .col,
       .row {
         padding-left: 0;
@@ -125,7 +125,7 @@
     width: 1.25rem;
     height: 1.75rem;
     path {
-      fill: var(--masthead-crest-color);
+      fill: var(--sgds-masthead-crest-color);
     }
   }
 
@@ -150,13 +150,13 @@
 
   .sgds-masthead-button {
     display: flex;
-    color: var(--masthead-link-color);
+    color: var(--sgds-masthead-link-color);
     align-items: center;
     cursor: pointer;
     &-text {
       text-decoration: underline;
       &:hover {
-        color: var(--masthead-link-color-hover);
+        color: var(--sgds-masthead-link-color-hover);
       }
     }
   }
@@ -192,7 +192,7 @@
       gap: 1rem;
       font-size: 1rem;
       @media screen and (max-width: 1023px) {
-        font-size: var(--masthead-mobile-font-size);
+        font-size: var(--sgds-masthead-mobile-font-size);
         gap: 0.5rem;
       }
       .content {
@@ -213,7 +213,7 @@
       .banner-icon {
         width: 1.125rem;
         path {
-          fill: var(--masthead-text-color);
+          fill: var(--sgds-masthead-text-color);
         }
 
         @media screen and (max-width: 1023px) {
@@ -228,7 +228,7 @@
       }
       .banner-icon-inline {
         path {
-          fill: var(--masthead-text-color);
+          fill: var(--sgds-masthead-text-color);
         }
         @media screen and (max-width: 1023px) {
           width: 0.6rem;
@@ -253,16 +253,16 @@
   a.trusted-websites-link {
     display: inline-flex;
     align-items: center;
-    color: var(--masthead-link-color);
+    color: var(--sgds-masthead-link-color);
     margin-left: 0.125rem;
     svg {
       margin-left: 0.125rem;
-      fill: var(--masthead-link-color);
+      fill: var(--sgds-masthead-link-color);
     }
     &:hover {
-      color: var(--masthead-link-color-hover);
+      color: var(--sgds-masthead-link-color-hover);
       svg {
-        fill: var(--masthead-link-color-hover);
+        fill: var(--sgds-masthead-link-color-hover);
       }
     }
   }
@@ -276,16 +276,16 @@
   .sgds-masthead {
     > .container {
       @media screen and (max-width: 1023px) {
-        padding-left: var(--masthead-mobile-padding-x);
-        padding-right: var(--masthead-mobile-padding-x);
+        padding-left: var(--sgds-masthead-mobile-padding-x);
+        padding-right: var(--sgds-masthead-mobile-padding-x);
       }
     }
     > .container-fluid {
-      padding-left: var(--masthead-fluid-padding-x);
-      padding-right: var(--masthead-fluid-padding-x);
+      padding-left: var(--sgds-masthead-fluid-padding-x);
+      padding-right: var(--sgds-masthead-fluid-padding-x);
       @media screen and (max-width: 1023px) {
-        padding-left: var(--masthead-mobile-padding-x);
-        padding-right: var(--masthead-mobile-padding-x);
+        padding-left: var(--sgds-masthead-mobile-padding-x);
+        padding-right: var(--sgds-masthead-mobile-padding-x);
       }
     }
 
